<resources>
    <string name="app_name">OnlineShopApp</string>
    <string name="intro_title"><font color="#000000">Unveiling a World</font> \n<font color="#008b86">Toys &amp; Accessories &amp; Foods</font> \n<font color="#008b86">For Your Pet</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast, free shipping</string>
    <string name="intro_signin">Already have an account? <font color="#008b86">Sign In</font></string>
    <string name="intro_start_text">Let\'s Get Started</string>
    <string name="welcome_main_txt">Welcome</string>
    <string name="user_name_txt">Tom Johnson</string>
    <string name="notification_number_txt">1</string>
    <string name="search_bar_txt">Search anything...</string>
    <string name="categories_title_txt">Categories</string>
    <string name="see_all_txt">See all</string>
    <string name="best_seller_title_txt">Best Seller Product</string>
    <string name="explorer_txt">Explorer</string>
    <string name="cart_txt">Cart</string>
    <string name="wishlist_txt">Wishlist</string>
    <string name="my_order_txt">My Order</string>
    <string name="profile_txt">Profile</string>
</resources>